data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4455.wast
;; 4. **Test Description:** Use a `call_indirect` with correct table index but the function table itself has incorrect entries, such as non-function entries, to verify proper trapping.    - **Constraint:** Tests table entry type validation.    - **Improper Handling Relation:** Executing non-function entries could cause undefined behavior or incorrect control flow.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $foo (param i32))
    (table 1 (ref null 0))  ;; Insert a non-function entry
    (func (call_indirect (type 0) (i32.const 0) (local.get 0)))
  )
  "type mismatch"
)